# Test-Web

./: .env.example  .gitignore  Claude.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py  theme.py
docs/: eval-results.md  phase1.md  validation-log.md
examples/: books-suite.yaml  generated-saucedemo.yaml  saucedemo-heal.yaml  smoke-suite.yaml
migrations/: env.py
migrations/versions/: 58e334ba0aa7_phase_4_scheduler_and_notify.py  a2cbd1fcd22f_initial_schema.py
qascan/: __init__.py  aggregate.py  cli.py  config.py  crawler.py  findings.py  llm.py  notify.py  report.py  scheduler.py  service.py  urls.py
qascan/checks/: __init__.py  accessibility.py  exploratory.py  performance.py  seo.py
qascan/db/: __init__.py  models.py  repository.py  session.py
qascan/functional/: __init__.py  assertions.py  auth.py  executor.py  generator.py  locators.py  schema.py  snapshot.py
scripts/: heal_eval.py  validate.py
tests/: conftest.py  test_accessibility.py  test_aggregate.py  test_crawler.py  test_db.py  test_exploratory.py  test_findings.py  test_functional.py  test_hardening.py  test_notify.py  test_report.py  test_scheduler.py  test_seo.py  test_service.py
tests/fixtures/: a.html  b.html  broken.html  c.html  crash_hub.html  d.html  e.html  form.html  index.html  login.html  ok.html  seo_bad.html  traps.html  welcome.html
