[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qascan"
version = "0.1.0"
description = "URL-only oracle-free web QA scanner (exploratory + accessibility)"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "pyyaml>=6",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
dashboard = [
    "streamlit>=1.36",
]

[project.scripts]
qascan = "qascan.cli:app"

[tool.setuptools.packages.find]
include = ["qascan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic autogenerates these; don't lint generated migration scripts.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep the spec's literal `Severity(str, Enum)` definition (docs/phase1.md).
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Typer's Option/Argument-in-defaults is the documented idiom.
"qascan/cli.py" = ["B008"]
